Bug #21966
class rbd.Image discard----OSError: [errno 2147483648] error discarding region
0%
Description
hi, when I use rbd.Image.discard, OS error appear sometime. I use ceph rbd as the storage backend of openstack cinder.
issue make steps:
1. create cinder volume
2. backup this volume
3. extend the volume size
4. restore volume
the error callstack is as follows:
2017-10-28 04:31:52.769 5231 ERROR oslo_messaging.rpc.server Traceback (most recent call last):
2017-10-28 04:31:52.769 5231 ERROR oslo_messaging.rpc.server File "/usr/lib/python2.7/site-packages/oslo_messaging/rpc/server.py", line 133, in process_incoming
2017-10-28 04:31:52.769 5231 ERROR oslo_messaging.rpc.server res = self.dispatcher.dispatch(message)
2017-10-28 04:31:52.769 5231 ERROR oslo_messaging.rpc.server File "/usr/lib/python2.7/site-packages/oslo_messaging/rpc/dispatcher.py", line 150, in dispatch
2017-10-28 04:31:52.769 5231 ERROR oslo_messaging.rpc.server return self._do_dispatch(endpoint, method, ctxt, args)
2017-10-28 04:31:52.769 5231 ERROR oslo_messaging.rpc.server File "/usr/lib/python2.7/site-packages/oslo_messaging/rpc/dispatcher.py", line 121, in _do_dispatch
2017-10-28 04:31:52.769 5231 ERROR oslo_messaging.rpc.server result = func(ctxt, **new_args)
2017-10-28 04:31:52.769 5231 ERROR oslo_messaging.rpc.server File "/usr/lib/python2.7/site-packages/cinder/backup/manager.py", line 588, in restore_backup
2017-10-28 04:31:52.769 5231 ERROR oslo_messaging.rpc.server backup.save()
2017-10-28 04:31:52.769 5231 ERROR oslo_messaging.rpc.server File "/usr/lib/python2.7/site-packages/oslo_utils/excutils.py", line 220, in exit
2017-10-28 04:31:52.769 5231 ERROR oslo_messaging.rpc.server self.force_reraise()
2017-10-28 04:31:52.769 5231 ERROR oslo_messaging.rpc.server File "/usr/lib/python2.7/site-packages/oslo_utils/excutils.py", line 196, in force_reraise
2017-10-28 04:31:52.769 5231 ERROR oslo_messaging.rpc.server six.reraise(self.type, self.value, self.tb)
2017-10-28 04:31:52.769 5231 ERROR oslo_messaging.rpc.server File "/usr/lib/python2.7/site-packages/cinder/backup/manager.py", line 573, in restore_backup
2017-10-28 04:31:52.769 5231 ERROR oslo_messaging.rpc.server self._run_restore(context, backup, volume)
2017-10-28 04:31:52.769 5231 ERROR oslo_messaging.rpc.server File "/usr/lib/python2.7/site-packages/cinder/backup/manager.py", line 626, in _run_restore
2017-10-28 04:31:52.769 5231 ERROR oslo_messaging.rpc.server backup_service.restore(backup, volume.id, device_path)
2017-10-28 04:31:52.769 5231 ERROR oslo_messaging.rpc.server File "/usr/lib/python2.7/site-packages/cinder/backup/drivers/ceph.py", line 1155, in restore
2017-10-28 04:31:52.769 5231 ERROR oslo_messaging.rpc.server self._restore_volume(backup, target_volume, volume_file)
2017-10-28 04:31:52.769 5231 ERROR oslo_messaging.rpc.server File "/usr/lib/python2.7/site-packages/cinder/backup/drivers/ceph.py", line 1122, in _restore_volume
2017-10-28 04:31:52.769 5231 ERROR oslo_messaging.rpc.server volume_name, length, src_snap=restore_point)
2017-10-28 04:31:52.769 5231 ERROR oslo_messaging.rpc.server File "/usr/lib/python2.7/site-packages/cinder/backup/drivers/ceph.py", line 925, in _full_restore
2017-10-28 04:31:52.769 5231 ERROR oslo_messaging.rpc.server length)
2017-10-28 04:31:52.769 5231 ERROR oslo_messaging.rpc.server File "/usr/lib/python2.7/site-packages/cinder/backup/drivers/ceph.py", line 319, in _transfer_data
2017-10-28 04:31:52.769 5231 ERROR oslo_messaging.rpc.server length - dest.tell())
2017-10-28 04:31:52.769 5231 ERROR oslo_messaging.rpc.server File "/usr/lib/python2.7/site-packages/cinder/backup/drivers/ceph.py", line 285, in _discard_bytes
2017-10-28 04:31:52.769 5231 ERROR oslo_messaging.rpc.server volume.rbd_image.discard(offset, length)
2017-10-28 04:31:52.769 5231 ERROR oslo_messaging.rpc.server File "rbd.pyx", line 2131, in rbd.Image.discard (/home/jenkins-build/build/workspace/ceph-build/ARCH/x86_64/AVAILABLE_ARCH/x86_64/AVAILABLE_DIST/centos7/DIST/centos7/MACHINE_SIZE/huge/release/12.2.0/rpm/el7/BUILD/ceph-12.2.0/build/src/pybind/rbd/pyrex/rbd.c:18989)
2017-10-28 04:31:52.769 5231 ERROR oslo_messaging.rpc.server OSError: [errno 2147483648] error discarding region 1073741824~2147483648
Related issues
History
#1 Updated by Nathan Cutler about 5 years ago
- Tracker changed from Tasks to Bug
- Project changed from Stable releases to rbd
- Regression set to No
- Severity set to 3 - minor
#2 Updated by Jason Dillaman about 5 years ago
- Status changed from New to In Progress
- Assignee set to Jason Dillaman
- Backport set to luminous,jewel
- Release deleted (
luminous) - Affected Versions deleted (
v12.2.0)
See tracker issue #16465. We cannot change the API, but we can truncate the return value to ensure it doesn't return a negative.
#3 Updated by Jason Dillaman about 5 years ago
- Status changed from In Progress to Fix Under Review
#4 Updated by Mykola Golub about 5 years ago
- Status changed from Fix Under Review to Pending Backport
#5 Updated by Nathan Cutler about 5 years ago
- Copied to Backport #22190: luminous: class rbd.Image discard----OSError: [errno 2147483648] error discarding region added
#6 Updated by Nathan Cutler about 5 years ago
- Copied to Backport #22191: jewel: class rbd.Image discard----OSError: [errno 2147483648] error discarding region added
#7 Updated by Nathan Cutler almost 5 years ago
- Status changed from Pending Backport to Resolved