librbd: prevent overflow of discard API result code

Prevent discard/writesame lengths larger than 2GB.

Fixes: http://tracker.ceph.com/issues/21966
Signed-off-by: Jason Dillaman <dillaman@redhat.com>
(cherry picked from commit 3effd324db181e625665be33b5c6529dca723cc5)
Signed-off-by: Nathan Cutler <ncutler@suse.com>

Conflicts:
	PendingReleaseNotes (adapted for jewel)
	src/librbd/librbd.cc (no writesame in jewel)